fix: header underline alignent

--- a/src/styles/tailwind/base.css
+++ b/src/styles/tailwind/base.css
@@ -65,4 +65,14 @@ body a {
     @apply inline-block focus:outline-none focus-visible:ring ring-primary-accent ring-opacity-60;
 }
 
+.underlined::after {
+    content: '';
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    @apply bg-primary-accent;
+}
+
 @tailwind utilities;
